src/test/deca/context/invalid/resultats/test14_undefined-ima.res
  IMA -- Fichier ./src/test/deca/context/invalid/test14_undefined.ass introuvable
